--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node ./server/app.js"
+    "start": "node ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "app": "nodemon server/app.js"
   },
