--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "app": "nodemon server/app.js"
+    "app": "nodemon server/app.js",
+    "start":"node ./server/app.js"
   },
   "author": "",
   "license": "ISC"
